[gd_scene load_steps=2 format=2]

[ext_resource path="res://unused/translation_convert.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -1.0
margin_right = -754.0
margin_bottom = -443.0
script = ExtResource( 1 )

[node name="load" type="FileDialog" parent="."]
margin_left = 272.0
margin_top = 179.0
margin_right = 1472.0
margin_bottom = 879.0
window_title = "Открыть файл"
mode = 0
filters = PoolStringArray( "*.json" )

[node name="save" type="FileDialog" parent="."]
margin_left = 272.0
margin_top = 179.0
margin_right = 1472.0
margin_bottom = 879.0
window_title = "Открыть файл"
mode = 0
filters = PoolStringArray( "*.csv" )

[node name="Button" type="Button" parent="."]
margin_left = 20.0
margin_top = 19.0
margin_right = 225.0
margin_bottom = 39.0
text = "select a scene"

[node name="Button2" type="Button" parent="."]
margin_left = 22.0
margin_top = 53.0
margin_right = 227.0
margin_bottom = 73.0
text = "select a translation"

[node name="Button3" type="Button" parent="."]
margin_left = 21.0
margin_top = 85.0
margin_right = 226.0
margin_bottom = 105.0
text = "convert"

[node name="Button4" type="Button" parent="."]
margin_left = 22.0
margin_top = 144.0
margin_right = 227.0
margin_bottom = 174.0
text = "refill translation"

[connection signal="file_selected" from="load" to="." method="_on_load_file_selected"]
[connection signal="file_selected" from="save" to="." method="_on_save_file_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
